# cmake-project-template

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  main.cpp
src/division/: CMakeLists.txt  division.cpp  division.h
test/: CMakeLists.txt
test/src/: divider_tests.cpp
